--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_dos">Dos</string>
-    <string name="tab_text_1">Dos</string>
-    <string name="tab_text_2">Donts</string>
+    <string name="tab_dos">Dos</string>
+    <string name="tab_donts">Donts</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_weekbywek">Week By Week</string>
+    <string name="tab_trimester_1">Trimester 1</string>
+    <string name="tab_trimester_2">Trimester 2</string>
+    <string name="tab_trimester_3">Trimester 3</string>
 </resources>
